Fixed create Sadlet menu on mobile

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -233,17 +233,19 @@ body {
 
 #createSadletMenu {
     position: fixed;
-    top: 10vh;
+    display: flex;
+    top: 10%;
     right: 0;
     transition: transform 500ms;
-    transform: translateY(-90px);
+    transform: translateY(-12.5vh);
     width: 300px;
     height: 80px;
     background-color: var(--bannerBackground);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 0 0 0 20px;
     box-sizing: border-box;
-    padding: 20px 0 20px 20px;
+    padding: 20px;
+    font-size: 5px;
 }
 
 #createSadletMenu input {
@@ -253,12 +255,13 @@ body {
     outline: none;
     border: none;
     font-family: Montserrat;
+    font-size: 13px;
 }
 
 #createSadletMenu button {
+    flex: 1;
     margin-left: 10px;
     height: 100%;
-    width: 35px;
     outline: none;
     border: none;
     border-radius: 10px;
